Rename igsc package to intel-gsc
Debian packages have minimum length requirements, so it is likely this
package would be rejected if we keep the name igsc

--- a/debian/control
+++ b/debian/control
@@ -12,7 +12,7 @@ Build-Depends:
 Standards-Version: 4.6.2
 Homepage: https://github.com/intel/igsc
 
-Package: igsc
+Package: intel-gsc
 Section: devel
 Architecture: amd64
 Depends:
