--- a/doc/doxyfile.in
+++ b/doc/doxyfile.in
@@ -1,5 +1,5 @@
 # SPDX-License-Identifier: Apache-2.0
-# Copyright (C) 2020 Intel Corporation
+# Copyright (C) 2020-2024 Intel Corporation
 
 # Doxyfile 1.8.11
 
@@ -1182,7 +1182,7 @@ HTML_COLORSTYLE_GAMMA  = 80
 # The default value is: NO.
 # This tag requires that the tag GENERATE_HTML is set to YES.
 
-HTML_TIMESTAMP         = YES
+HTML_TIMESTAMP         = NO
 
 # If the HTML_DYNAMIC_SECTIONS tag is set to YES then the generated HTML
 # documentation will contain sections that can be hidden and shown after the
